--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
             <span class="badge text-bg-primary">JavaScript</span>
           </div>
         </div>
+
+        <!-- Carrera -->
+    <div class="columna col-12 col-md-4">
+      <i class="bi bi-laptop"></i>
+      <p class="experiencia-titulo">Carrera</p>
+      <p>Para la carrera que quiero e sla de Derecho, ya que me llama la atencion los casos juridicos de las personas y tener mas conciencia sobre ello. </p>
+      <div class="badges-contenedor">
+        <span class="badge text-bg-primary">UNAM</span>
+        <span class="badge text-bg-primary">TESCHI</span>
+        <span class="badge text-bg-primary"></span>
+      </div>
+    </div>
         
         <!-- Estudiante -->
         <div class="columna col-12 col-md-4">
@@ -110,41 +122,72 @@
           <p>Estudio el 5to semestre de la Preparatoria y cuando termine la Preparatoria aun pienso seguir estudiando para ingresar a la Universidad</p>
           <div class="badges-contenedor">
             <span class="badge text-bg-primary">EPO 75</span>
-            <span class="badge text-bg-primary">Desarrollo Web</span>
           </div>
         </div>
       </div>
     </div>
-    <!-- Carrera -->
-    <div class="columna col-12 col-md-4">
-        <i class="bi bi-laptop"></i>
-        <p class="experiencia-titulo">Carrera</p>
-        <p>Para la carrera que quiero e sla de Derecho, ya que me llama la atencion los casos juridicos de las personas y tener mas conciencia sobre ello. </p>
-        <div class="badges-contenedor">
-          <span class="badge text-bg-primary">UNAM</span>
-          <span class="badge text-bg-primary">TESCHI</span>
-          <span class="badge text-bg-primary"></span>
-        </div>
-      </div>
-  </section>
 
+    <!-- Proyectos -->
+    <section id="proyectos" class="proyectos-recientes seccion-clara d-flex flex-column">
+      <h2 class="seccion-titulo texto-negro">Mis proyectos recientes</h2>
+      <h3 class="seccion-descripcion">Estos son algunos proyectos que he creado recientemente...</h3>
+      <!-- Galeria de Proyectos -->
+      <div class="container text-center proyectos-contenedor">
+        <div class="row">
+          <!-- Proyecto 1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="imagenes/charles.jpg" alt="Proyecto 1">
+              <div class="overlay">
+                <p>Proyecto 1</p>
+                <div class="iconos-contenedor">
+                  <a href="http://127.0.0.1:5502/index.html" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="#" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Proyecto 2 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="imagenes/google.jpg" alt="Proyecto 1">
+              <div class="overlay">
+                <p>Proyecto 2</p>
+                <div class="iconos-contenedor">
+                  <a href="http://127.0.0.1:5503/index.html" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="#/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Proyecto 3 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="proyecto">
+              <img src="imagenes/pau3.jpg" alt="Proyecto 1">
+              <div class="overlay">
+                <p>Proyecto 3</p>
+                <div class="iconos-contenedor">
+                  <a href="http://127.0.0.1:5500/index.html#" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a href="#/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-laptop"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
     
-      <div class="card" style="width: 18rem;">
-        <img src="imagenes/charles.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Charles Ans</h5>
-          <p class="card-text">Elaboracion de la biografia de mi cantante favorito "Charles Ans".</p>
-          <a href="#" class="btn btn-primary">Dar click para verlo</a>
-        </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="imagenes/google.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Clon de Google</h5>
-          <p class="card-text">Hice la elaboracion clon de la pagina de Google.</p>
-          <a href="#" class="btn btn-primary"> Da click para verla</a>
-        </div>
-      </div>
+    </section>
 
       <!-- Pie de pagina (footer) -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
