--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    <section id="sobre-mi" class="sobre-mi seccion-oscura">
     <div class="contenedor"> 
       <h2 class="seccion-titulo">Conoce a Paula</h2>
-      <p class="seccion-texto">Paula nacio el 16 de agosto del 2004, es estudiante de Nivel Medio Superior, estudia en la Preparatoria ofical numero 75 que se encuentra localizada en el Municipio de Chimalhuacan en la colonia San Lorenzo, a Pau le gustan mucho los gatos y los perros, no le gustan las matematicas pero es beuna en ellas, siempre se preocupa por las personas que la rodean trata de ser atentas con ellas en especial a la que son muy cercanas a ellas, es muy dedicada y muy sentimental llora y se enoja por cualquier cosa asi sea muy pequeña.</p>
+      <p class="seccion-texto">Paula nacio el 16 de agosto del 2004, es estudiante de Nivel Medio Superior, estudia en la Preparatoria Ofical Numero 75 que se encuentra localizada en el Municipio de Chimalhuacan en la colonia San Lorenzo, a Pau le gustan mucho los gatos y los perros, no le gustan las matematicas pero es buena en ellas, siempre se preocupa por las personas que la rodean trata de ser atenta con ellas en especial a la que son muy cercanas a ellas, es muy dedicada y muy sentimental llora y se enoja por cualquier cosa asi sea muy pequeña.</p>
     </div>
   </section>
 
@@ -95,7 +95,7 @@
         <div class="columna col-12 col-md-4">
           <i class="bi bi-laptop"></i>
           <p class="experiencia-titulo">Desarrollo Web</p>
-          <p>Durante este tiempo he Desarrollado tres proyectos web, qie serian la paguina de mi cantante favorito, el clon de Google y mi portafolios personal </p>
+          <p>Durante este tiempo he Desarrollado tres proyectos web, que serian la pagina de mi cantante favorito, el clon de Google y mi portafolio personal </p>
           <div class="badges-contenedor">
             <span class="badge text-bg-primary">HTML</span>
             <span class="badge text-bg-primary">CSS</span>
@@ -107,7 +107,7 @@
     <div class="columna col-12 col-md-4">
       <i class="bi bi-laptop"></i>
       <p class="experiencia-titulo">Carrera</p>
-      <p>Para la carrera que quiero e sla de Derecho, ya que me llama la atencion los casos juridicos de las personas y tener mas conciencia sobre ello. </p>
+      <p>Para la carrera que quiero es la de Derecho, ya que me llama la atencion los casos juridicos de las personas y tener mas conciencia sobre ello. </p>
       <div class="badges-contenedor">
         <span class="badge text-bg-primary">UNAM</span>
         <span class="badge text-bg-primary">TESCHI</span>
@@ -188,6 +188,30 @@
     
       </div>
     </section>
+
+<!-- Contacto -->
+<section id="contacto" class="contacto seccion-oscura">
+    <div class="container">
+      <div class="container text-center rectangulo d-flex justify-content-evenly">
+        <div class="row">
+          <div class="col-12 col-md-4 seccion-titulo">
+            ¡Comunicate!
+          </div>
+          <div class="col-12 col-md-4 descripcion">
+            Contactame para iniciar un proyecto juntos.
+          </div>
+          <div class="col-12 col-md-4">
+            <a href="mailto:janedoe@micorreo.com">
+              <button type="button">  
+                Contacto
+                <i class="bi bi-envelope-check-fill"></i>
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
       <!-- Pie de pagina (footer) -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
